--- a/012_Errors_Basic_Time_Series_sol.ipynb
+++ b/012_Errors_Basic_Time_Series_sol.ipynb
@@ -1072,6 +1072,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 錯誤 - MSE 和 RMSE\n",
+    "\n",
+    "有很多不同的方法來計算誤差，RMSE 可能是最重要的使用方法，有時也會使用/看到 MSE。\n",
+    "\n",
+    "<b>注意：</b> MSE 和 RMSE 確實會受到異常值的影響。 想想為什麼。 另一種常見的誤差度量——平均絕對誤差往往受異常值的影響較小。 想想為什麼。\n",
+    "\n",
+    "每個錯誤計算的基本思想就像這個簡單的例子——預測是什麼，期望值是多少，它們相差多少，我們如何將這些差異聚合成一個值。 （分類錯誤不一樣，後面會講到）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Thought Exercise\n",
     "\n",
     "We'll cover this later, so if it makes no sense please just skip it. \n",
