--- a/017_Hypothesis_Test_2_sol.ipynb
+++ b/017_Hypothesis_Test_2_sol.ipynb
@@ -67,11 +67,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 沒有一個測試應該擁有所有這些能力\n",
+    "\n",
+    "## 錯誤和權力\n",
+    "\n",
+    "我們的假設檢驗有效地進行了分類——我們應該相信這種影響是顯著的，還是可能是偶然的。在這樣做的過程中，我們引入了兩種不同類型的錯誤：\n",
+    "<ul>\n",
+    "<li>誤報 - 這種影響確實是偶然的，我們認為它很重要。 （類型 1，阿爾法）\n",
+    "<li>假陰性 - 效果顯著，我們認為這是偶然的。 （類型 2，測試版）\n",
+    "</ul>\n",
+    "誤報率非常簡單——閾值率（通常為 0.05）。我們在閾值處定義了一個截止值——20 分之一的標準意味著我們預計 20 次測試中有 1 次是不正確的——誤報。\n",
+    "\n",
+    "有關我們如何使用 CDF 顯示這一點的詳細信息，請參閱第 130 頁。\n",
+    "<br><br>\n",
+    "檢測假陰性並不那麼容易......\n",
+    "\n",
+    "<b>注意</b>：如果樣本來自同一總體，p 值是我們期望看到這種差異量的次數。\n",
+    "\n",
+    "### 錯誤類型\n",
+    "\n",
+    "為了解決這個問題，我們需要快速了解不同的錯誤類型，以及每種錯誤類型是如何發生的。 \n",
+    "\n",
+    "（當我們開始在機器學習中做分類模型時，我們會花更多的時間在這上面）\n",
+    "\n",
+    "我們可以從中得出的關鍵思想是，我們可能會以不同的方式犯錯，而這些錯誤的原因可能不同。\n",
+    "\n",
+    "例如，如果我們運行假設檢驗並發現 p 值為 0.03，這表明我們有大約 3% 的機會出現誤報 - 而我們看到的差異實際上是由於隨機性造成的。\n",
+    "\n",
+    "這個 p 值並不能說明全部情況，如果我們在另一個方向上有錯誤怎麼辦 - 我們有重要的差異，但被識別為隨機的。我們的能力衡量這一點——我們犯這些 2 類錯誤的頻率是多少？"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Power\n",
     "\n",
     "Power is how the likelihood of a false negative is expressed, in terms of the compliment. The <b>power is the rate of correctly identified negatives</b>, or (1 - False Negatives). We can calculate this with a function from statsmodels, we can also try to generate it (pg131).\n",
     "\n",
     "First, we'll use the library function. (We also need the effect size - that's what the function will use to estimate how many )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "＃＃＃ 力量\n",
+    "\n",
+    "就讚美而言，權力是如何表達假陰性的可能性。 <b>功效是正確識別陰性的比率</b>，或（1 - 假陰性）。 \n",
+    "\n",
+    "我們可以使用來自 statsmodels 的函數來計算它，我們也可以嘗試生成它 (pg131)。\n",
+    "\n",
+    "首先，我們將使用庫函數。 （我們還需要效果大小——函數將使用它來估計有多少）"
    ]
   },
   {
@@ -474,6 +521,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 測試和結論\n",
+    "\n",
+    "我們已經看到了許多不同的方法來查看數據並嘗試評估樣本之間的差異是否真實。 \n",
+    "\n",
+    "我們用的是哪一個？ 這些測試都不是確定性的，因此我們希望看到的是多個測試的對齊。 \n",
+    "\n",
+    "一般而言，如果我們正在查看真正的差異，我們希望看到明顯的效果大小、t 檢驗中的低 p 值和大功率所有對齊 - \n",
+    "\n",
+    "我們不太關心特定的截止值，但 如果所有觀察樣本的方式似乎都表明存在相似之處，例如差異，那麼我們就可以非常確信我們所看到的是真實的。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## What About Categorical Data - Chi-2 Tests\n",
     "\n",
     "We can also mix up the tests a little bit to look at things a little differently. One example is dealing with categorical data and proportions - the chi squared test. Chi2 calculates relationships between categorical varaibles by looking at the difference between an expected number of observations, and the real number of observations. The other stuff in here generally looks at differences in the means of numerical values, chi2 looks at counts of categorical. \n",
@@ -485,6 +547,31 @@
     "#### Dice Rolls\n",
     "\n",
     "The heart of chi2 is calculating how big of a differnce there is between the counts that we'd expect, and the counts that we observe. For this example here we have a die that we've rolled 60 time, if the die is fair, the expected results would be even - 10 rolls per number. This is represented by the expected list below. If we count up the actual rolls, we observe a difference in counts, this is shown in the observed list. We want to know if this is reasonably likely to be due to random chance, or if this is likely a real effect (i.e. a rigged die). The chi2 gives us a p-value and all the same logic applies with testing that p. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 分類數據如何 - Chi-2 檢驗\n",
+    "\n",
+    "我們也可以稍微混合測試以稍微不同地看待事物。一個例子是處理分類數據和比例——卡方檢驗。 \n",
+    "\n",
+    "Chi2 通過查看預期觀察數與實際觀察數之間的差異來計算分類變量之間的關係。這裡的其他內容通常著眼於數值均值的差異，chi2 著眼於分類計數。\n",
+    "\n",
+    "在 9.7 書中有一個使用 chi2 對比例執行休假假設檢驗的示例。\n",
+    "\n",
+    "後來在機器學習的東西中，這個 chi2 概念被用來嘗試確定哪些分類特徵在模型中有用，類似於相關性如何與數值變量一起使用。\n",
+    "\n",
+    "#### 擲骰子\n",
+    "\n",
+    "chi2 的核心是計算我們期望的計數與我們觀察到的計數之間的差異有多大。\n",
+    "\n",
+    "對於此處的示例，我們有一個已擲 60 次的骰子，如果骰子是公平的，則預期結果將是偶數 - 每個數字擲 10 次。\n",
+    "\n",
+    "這由下面的預期列表表示。如果我們計算實際的滾動數，我們會觀察到計數差異，這顯示在觀察列表中。\n",
+    "\n",
+    "我們想知道這是否合理地可能是由於隨機機會，或者這是否可能是真實的效果（即被操縱的骰子）。 chi2 給了我們一個 p 值，所有相同的邏輯都適用於測試 p。"
    ]
   },
   {
