--- a/025_Logistic_Reg_sol.ipynb
+++ b/025_Logistic_Reg_sol.ipynb
@@ -165,6 +165,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 邏輯回歸\n",
+    "\n",
+    "線性回歸允許我們根據一個或多個輸入（數值或分類）進行數值預測。\n",
+    "\n",
+    "邏輯回歸等同於允許我們進行分類預測——預測某物是否屬於 A 組或 B 組。\n",
+    "\n",
+    "Logistic 回歸是基於我們的老朋友 logit，log ratio 的名聲。\n",
+    "\n",
+    "我們實際上是在進行回歸以預測某事發生的可能性，然後根據它是否比某個截止值（例如 50%）更有可能對其進行分類。\n",
+    "\n",
+    "例如，我們可以計算一筆交易是欺詐的概率，如果它是欺詐的可能性比不是欺詐的可能性大，我們就將其歸類為欺詐。\n",
+    "\n",
+    "現在，我們將研究兩個類別之間的預測，但這不是限制，我們可以分為許多類別。\n",
+    "\n",
+    "邏輯回歸（和其他分類方法）非常普遍。回歸/預測和分類是我們將在下學期研究的預測分析的兩大支柱。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The Classification Problem\n",
     "\n",
     "Dealing with classification is a little different than regression, because now we are not looking to predict a value, we are looking to predic a class - or phrased alternatively, we are looking to divide two (or more) sets of data.  \n",
@@ -178,6 +199,26 @@
     "    <ul>\n",
     "    <li> Seriously, try to generate any line of best fit that doesn't have massive residuals. \n",
     "    </ul>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 分類問題\n",
+    "\n",
+    "處理分類與回歸略有不同，因為現在我們不是要預測一個值，而是要預測一個類——或者換句話說，我們要劃分兩個（或更多）數據集。\n",
+    "\n",
+    "如果我們繪製一個簡單的 2 變量問題，就像我們在線性回歸中所做的那樣，我們將得到如下所示的結果：\n",
+    "<ul>\n",
+    "<li> 假設 BMI 是我們的 X，結果（你有糖尿病嗎？）是 Y。\n",
+    "<li> 將其繪製在散點圖上。\n",
+    "<li> 我們的目標是使用 X 來預測 Y，就像在線性回歸中一樣。\n",
+    "<li> 但是，沒有一種非常明顯的方法可以僅使用 X 值來執行具有任何準確度的線性回歸。\n",
+    "     <ul>\n",
+    "     <li> 說真的，嘗試生成任何沒有大量殘差的最佳擬合線。\n",
+    "     </ul>\n",
     "</ul>"
    ]
   },
@@ -715,6 +756,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>真實示例 - SciKitLearn</h2>\n",
+    "\n",
+    "對於我們的第一次嘗試，我們可以使用我們之前使用過的糖尿病示例，儘管我們總是迴避真正的目標。 \n",
+    "\n",
+    "結果值是某人是否患有糖尿病，以及所有其他變量，這些變量是我們可以用來預測某人是否會患上糖尿病的風險因素。 \n",
+    "\n",
+    "我們的目標是預測，是或否，是否有人會根據這些風險因素患上糖尿病。\n",
+    "\n",
+    "第一 - 一個變量。 我們將使用 BMI。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 223,
    "metadata": {},
@@ -740,6 +796,21 @@
    "metadata": {},
    "source": [
     "<b>ravel()</b> - sometimes you may get a message that says something like \"we want the y data in the shape (samples,)\". This is obviously a contradiction to what we said to always shape the y as (samples, 1). The easiest way to deal with this is to use the .ravel() function as shown below. The cause is the expectation of data format for whatever you're using, which can vary. If we always make the y array (samples, 1) and then use ravel when needed, that allows us to be consistent and not worry about it much. I'd suggest keeping with this for simplicity. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>ravel()</b> - 有時您可能會收到一條消息，內容類似於“我們想要形狀為 (samples,) 的 y 數據”。 \n",
+    "\n",
+    "這顯然與我們所說的始終將 y 塑造為 (samples, 1) 相矛盾。 處理這個問題的最簡單方法是使用 .ravel() 函數，如下所示。 \n",
+    "\n",
+    "原因是對您使用的任何數據格式的期望，這可能會有所不同。 \n",
+    "\n",
+    "如果我們總是創建 y 數組 (samples, 1) 然後在需要的時候使用 ravel，那麼我們就可以保持一致而不必擔心太多。 \n",
+    "\n",
+    "為了簡單起見，我建議保持這一點。"
    ]
   },
   {
@@ -839,6 +910,17 @@
    "metadata": {},
    "source": [
     "When I ran this the first time, I didn't get an answer, I instead got something along the lines of \"failed to converge\". This means that the gradient descent process didn't finish, and the algorithm didn't settle on an answer. We will explore this more in the machine learning stuff, for now we can just tell it to set a higher cap on how long it can run. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "當我第一次運行它時，我沒有得到答案，而是得到了類似“無法收斂”的信息。 \n",
+    "\n",
+    "這意味著梯度下降過程沒有完成，算法也沒有確定答案。 \n",
+    "\n",
+    "我們將在機器學習方面對此進行更多探索，現在我們可以告訴它為它可以運行多長時間設置一個更高的上限。"
    ]
   },
   {
@@ -1313,11 +1395,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ea39297c2a3b8433e0e3c4b620aff79df88eb4bda961dfb2311fbafd7efdbd77"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.11 64-bit ('base': conda)",
+   "display_name": "Python 3.9.13 ('base')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -1330,9 +1410,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "40846f95e88ae24f681f7d79d7396bca459ce37b2ecada686cfbc3bbe9daaf0c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
