--- a/026_Logistic_Regression_Normalization_2_sol.ipynb
+++ b/026_Logistic_Regression_Normalization_2_sol.ipynb
@@ -406,6 +406,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 可變重要性\n",
+    "\n",
+    "我們還可以使用 statsmodels 結果來評估可變重要性。 p 值是變量重要性的度量，它的工作原理與 p 值的一般作用非常相似 - 如果它很小，通常 <.05，則關係很重要。\n",
+    "\n",
+    "這有助於指導我們了解哪些特徵對進行預測很重要，哪些不重要。\n",
+    "\n",
+    "對此以及我們所看到的任何其他可變選擇事物的一個注意事項是，它們不是確定性和決定性的發現，它們只是指示。\n",
+    "\n",
+    "對於這個線性回歸模型，我們可以看到現在 SkinThickness、胰島素和 DPG 可能是最不重要的貢獻者。這不會自動轉化為僅刪除 p 值 < .05 的所有內容，然後收工。\n",
+    "\n",
+    "在處理 ML 內容時，我們將研究一些選擇變量的條件，但我們研究過的一些可能會使這變得複雜的事情是：\n",
+    "<ul>\n",
+    "<li> 解釋的方差 - R2。回想一下，我們的目標是盡可能多地捕獲定義目標如何變化的信息。假設我們有一個具有 5 個特徵的模型 - 其中 4 個提供預測值，一個不太重要。\n",
+    "\n",
+    "想一個模型來預測老師有多好——目標可能是“測試結果”，特徵可能是“製作課程材料的時間”、“多年的經驗”、“材料知識”、“作業質量” ，以及“使用的白板筆的顏色”。\n",
+    "\n",
+    "在這個例子中，白板筆的顏色會有所不同，我絕對記得那些很難看清白板的課程，尤其是當你需要戴眼鏡的時候。\n",
+    "\n",
+    "然而，這只是一個很小的因素。如果這個模型存在，白板標記的顏色可能會有一個小的 p 值，因為它沒有那麼有影響力；然而，它仍然有一定的重要性，並增加了一些價值，只是比其他的要少得多。\n",
+    "\n",
+    "刪除它並不能使我們的模型更好地預測，它只會使它更緊湊——我們必須在這兩者之間取得平衡。\n",
+    "\n",
+    "<li> 一般來說，除非一個變量是“壞的”（混淆數據），否則刪除它可能不會使準確性飛躍。\n",
+    "<li> 不同的模型會有不同的反應。這些線性模型捕獲線性關係，其他模型可以捕獲不同的關係，因此如果特徵集發生變化，則可能對不同模型產生完全不同的影響。這通常不是我們可以提前準確預測的事情。\n",
+    "</ul>\n",
+    "\n",
+    "特徵選擇是一個很大的話題，我們將在進行時重新討論它。\n",
+    "\n",
+    "現在，我們可以使用我們的 p 值工具根據變量的重要性對變量進行排序，並在需要時按該順序刪除變量。\n",
+    "\n",
+    "<b>關於共線性的注意事項：</b>如果我們回顧共線性，我們會發現有時我們的變量都為模型提供相同的信息。\n",
+    "\n",
+    "如果是這樣的話，這個重要性的 p 值有點隨機，因為模型不能準確地將重要性歸因於每個變量，因為每個變量都提供相同的信息，所以無法拆分。\n",
+    "\n",
+    "例如，如果模型根據大腿尺寸、膝蓋尺寸和小腿尺寸預測褲子尺寸，那麼這 3 個特徵之間的 p 值將不可靠。\n",
+    "\n",
+    "那個預測中哪個重要？我們不知道，所以哪個具有更高或更低的 p 值並不重要。如果我們首先削減共線值，那麼只有一個變量測量“腿尺寸”，因此由於腿尺寸導致的褲子尺寸預測的任何變化都是由於剩下的一個變量。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -435,7 +478,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predictions give us the probabilities, we need to convert to 0-1 to give 'real' answers. We'll make a function:"
+    "Predictions give us the probabilities, we need to convert to 0-1 to give 'real' answers. We'll make a function:\n",
+    "\n",
+    "預測給了我們概率，我們需要轉換為 0-1 才能給出“真實”答案。 我們將創建一個函數："
    ]
   },
   {
@@ -2543,6 +2588,19 @@
     "Looks good!\n",
     "\n",
     "Note: We have relatively little data, so the swings for accuracy between trials can be pretty pronounced. The first time I ran this there was a big improvement in accuracy after removing stuff, other runs had a smaller difference. More data would make it more stable, repeating the trials would also. You could build a loop to repeat trials, we'll do it the sklearn way early next semester. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "看起來不錯！\n",
+    "\n",
+    "注意：我們的數據相對較少，因此試驗之間的準確性波動非常明顯。 \n",
+    "\n",
+    "我第一次運行此程序時，刪除內容後準確性有了很大提高，其他運行的差異較小。 \n",
+    "\n",
+    "更多的數據會使它更穩定，重複試驗也會。 你可以建立一個循環來重複試驗，我們將在下學期初以 sklearn 的方式進行。"
    ]
   }
  ],
