--- a/027_Imbalanced_Dataset_Regression_sol.ipynb
+++ b/027_Imbalanced_Dataset_Regression_sol.ipynb
@@ -557,6 +557,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "一些變量，如 V13，顯示欺詐交易和非欺詐交易之間的差異很小。 其他類似 V14 的交易似乎顯示出合法交易和欺詐交易之間存在一些實質性差異。 我們可以懷疑那些有差異的可能是我們進行預測時最相關的特徵。 然而，這只是一種懷疑——例如，變量的組合可能包含很多預測值，而這些並不是真正可見的。\n",
+    "\n",
+    "首先，我們可以建立一個基本模型，看看我們在沒有任何操作的情況下的準確性。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -627,6 +636,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 簡單模型結果\n",
+    "\n",
+    "總體準確率當然很高。 我們確實有很多我們遺漏的欺詐行為，但是 - 我們可以嘗試解決這個問題......希望如此。\n",
+    "\n",
+    "我們也幾乎總是只是猜測“不是欺詐”，這會導致高精度，但不是最有用的解決方案。 除了這裡的準確性，我們可能更想看的是 Recall 和 F1。 \n",
+    "\n",
+    "召回率是我們檢測到的欺詐數量的指標，因此我們希望它很高。 \n",
+    "\n",
+    "F1 是召回率和精確率的平衡（我們檢測到的欺詐有多少是真實的），所以這也是一個考慮因素——我們不想指責無辜的持卡人！"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Transformations for Imbalanced Data\n",
     "\n",
     "We can manipulate our dataset to generate training data that is better suited to training our model. The lack of balance between the two target classes \"makes it hard\" for our model to learn to make reliable predictions - it wants to be accurate, and the easiest way to be accurate is to just guess \"not fraud\". To attempt to negate this we can just make our dataset more equal and use that to train the model. \n",
@@ -634,6 +658,29 @@
     "We are still testing against that set aside testing dataset, so our evaluation of accuracy stays constant. \n",
     "\n",
     "<b>Note:</b> when doing things like resampling we are obviously changing the original dataset, and making it into something it isn't. This can feel wrong, but if we step back we can see it is ok. Our goal is not to maintain an accurate set of training data, our interest is to make an accurately predicting model. If changing our data allows the model to become better, that's fine - even if the underlying data is \"wrong\" or altered. If you've ever trained for a sport, this is kind of similar to that - you might practice shooting a basketball with one hand, or swing a heavier baseball bat, or practice just the last little wrist-flick part of a hockey shot over and over - you're changing the \"training material\" (what you practice) to be something that is different from the actual sport, in order to allow that training to make the main thing you care about better. This is the same, if changed data lets the model learn, then we are OK with it. In practice, we can even generate synthetic training data, we'll look at that a bit around when we look at neural networks. \n",
+    "\n",
+    "\n",
+    "## 不平衡數據的數據轉換\n",
+    "\n",
+    "我們可以操縱我們的數據集來生成更適合訓練我們模型的訓練數據。\n",
+    "\n",
+    "兩個目標類別之間缺乏平衡“使我們的模型很難”學會做出可靠的預測——它想要準確，而最簡單的準確方法就是猜測“不是欺詐”。\n",
+    "\n",
+    "為了試圖否定這一點，我們可以讓我們的數據集更平等，並用它來訓練模型。\n",
+    "\n",
+    "我們仍在針對該預留測試數據集進行測試，因此我們對準確性的評估保持不變。\n",
+    "\n",
+    "<b>注意：</b>在進行重採樣之類的操作時，我們顯然是在更改原始數據集，並將其變成原來的數據集。\n",
+    "\n",
+    "這可能感覺不對，但如果我們退後一步，我們可以看到它沒問題。我們的目標不是維護一組準確的訓練數據，我們的興趣是建立一個準確的預測模型。\n",
+    "\n",
+    "如果改變我們的數據可以讓模型變得更好，那很好——即使基礎數據是“錯誤的”或改變的。\n",
+    "\n",
+    "如果您曾經接受過某項運動的訓練，那麼這有點類似於那種——您可能會練習用一隻手投籃，或者揮動更重的棒球棒，或者只練習曲棍球投籃的最後一點手腕輕彈部分及以上 - \n",
+    "\n",
+    "您正在將“培訓材料”（您練習的內容）更改為與實際運動不同的東西，以便讓該培訓使您關心的主要事情變得更好。\n",
+    "\n",
+    "這是一樣的，如果改變的數據讓模型學習，那麼我們就可以接受。在實踐中，我們甚至可以生成合成訓練數據，我們將在研究神經網絡時稍微了解一下。\n",
     "\n",
     "### Undersampling and Oversampling\n",
     "\n",
@@ -651,7 +698,19 @@
     "\n",
     "The most simple way to approach this is to undersample the not frauds - just leave a bunch out. That one kind of has a downside - we're leaving behind all that potentially valuable data!\n",
     "\n",
-    "We can create a simple undersampler and test it. We will use all the fraudulent data, and randomly select non-fraud data so that we have a balanced number of records on each side. This chops out a bunch of data, but it will give us an equal number of fraud/good, so our dumb approach of always guessing NO won't work with this data. Note that the test dataest is really large here - since our training data is limited, there's not much, if any, downside to just using the rest of the records as test data. "
+    "We can create a simple undersampler and test it. We will use all the fraudulent data, and randomly select non-fraud data so that we have a balanced number of records on each side. This chops out a bunch of data, but it will give us an equal number of fraud/good, so our dumb approach of always guessing NO won't work with this data. Note that the test dataest is really large here - since our training data is limited, there's not much, if any, downside to just using the rest of the records as test data. \n",
+    "\n",
+    "###欠採樣\n",
+    "\n",
+    "解決這個問題的最簡單方法是對非欺詐行為進行低採樣——只留下一堆。 \n",
+    "\n",
+    "那種方式有一個缺點——我們會留下所有潛在有價值的數據！\n",
+    "\n",
+    "我們可以創建一個簡單的欠採樣器並對其進行測試。 我們將使用所有欺詐數據，並隨機選擇非欺詐數據，以便我們在每一方都有平衡的記錄數。 \n",
+    "\n",
+    "這切掉了一堆數據，但它會給我們相同數量的欺詐/好，所以我們總是猜測 NO 的愚蠢方法不適用於這些數據。 \n",
+    "\n",
+    "請注意，這裡的測試數據量非常大 - 由於我們的訓練數據有限，因此僅使用其餘記錄作為測試數據的缺點並不多（如果有的話）。"
    ]
   },
   {
@@ -734,9 +793,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "####欠採樣結果\n",
+    "\n",
+    "我們的整體準確性仍然很高，但不是很相關。 我們提高了召回率，因此我們發現了更多欺詐行為。 \n",
+    "\n",
+    "不利的一面是，我們的精度下降了，我們指責太多人不公平地偷竊！ \n",
+    "\n",
+    "同樣，我們預計結果會有很大差異——我們將剔除一小部分非欺詐並忽略其餘部分； 每次運行的隨機變化可能都很重要。\n",
+    "\n",
+    "我們可能會打敗它，至少我們希望如此。 我們可以嘗試對缺失值進行過採樣，或者更多地包含它。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Oversampling\n",
     "\n",
     "Now we can try to oversample, or duplicate the fraudulent examples in the training data until we have a balanced dataset. We will take the fraudulent records and use sampling with replacement (the records sampled are returned to the pool after they are taken), to \"build up\" the fraudulent part of the dataset to be the same size as the non-fraudulent ones. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 過採樣\n",
+    "\n",
+    "現在我們可以嘗試過度採樣，或者復制訓練數據中的欺詐示例，直到我們擁有一個平衡的數據集。 \n",
+    "\n",
+    "我們將獲取欺詐記錄並使用有放回抽樣（抽樣的記錄在獲取後返回到池中），以“建立”數據集的欺詐部分，使其與非欺詐部分的大小相同。"
    ]
   },
   {
@@ -828,6 +913,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 更複雜的採樣 - 使用庫函數\n",
+    "\n",
+    "如果我們看上面的內容，我們並沒有真正提高準確性，事實上我們總體上比啞模型還差。 \n",
+    "\n",
+    "在某些時候，我們確實在某些指標上取得了一些進步，但並不是以一種非常出色的方式。\n",
+    "\n",
+    "我們可以使用一些更複雜的庫函數來嘗試讓它變得更好。\n",
+    "\n",
+    "<b>注意：</b>您可能需要安裝 imblearn 包。 \n",
+    "\n",
+    "打開一個終端，然後輸入“pip install imblearn”或“conda install imblearn”，其中一個應該可以工作。 \n",
+    "\n",
+    "您可能需要保存並重新打開此文件以強制其更新。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -898,6 +1002,40 @@
     "from collections import Counter\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 重採樣函數、決策邊界和數據生成\n",
+    "\n",
+    "我們可以利用這些隨機的過/欠採樣器來幫助我們更輕鬆地完成我們上面所做的事情。\n",
+    "\n",
+    "這些重採樣庫在選擇方面也比隨機庫更聰明——每個庫的工作方式都不同，\n",
+    "\n",
+    "但它們通常會尋找有助於構建<i>歧視性</i>模型的記錄，或者非常擅長將真值與真值分離的記錄假的，或者從不欺詐的欺詐。\n",
+    "\n",
+    "在下面的代碼中有一大堆不同的採樣策略。有很多！我們有一些可以嘗試的。過採樣/欠採樣正是我們在上面所做的。\n",
+    "\n",
+    "其他人使用一些更複雜的方法來進行抽樣。我們可以嘗試的一些是：\n",
+    "<ul>\n",
+    "<li>SMOTE - 過採樣。很常見。定義：“SMOTE 的工作原理是選擇特徵空間中接近的示例，在特徵空間中的示例之間畫一條線，然後沿著該線繪製一個新樣本作為一個點。”\n",
+    "\n",
+    "<li>Tomek 鏈接 - 欠採樣。定義：“Tomek Links 是指一種用於識別數據集中具有不同類別的最近鄰對的方法。\n",
+    "\n",
+    "刪除這些對中的一個或兩個示例（例如多數類中的示例）具有做出決策的效果訓練數據集中的邊界噪音較小或不明確。”\n",
+    "\n",
+    "<li>ADASYS - 過採樣。與 SMOTE 類似，但它根據對要過採樣類的局部分佈的估計生成不同數量的樣本\n",
+    "</ul>\n",
+    "\n",
+    "通常，過採樣和欠採樣都相當普遍。我們可能會看到它使用的常見地方是統計調查類型 - \n",
+    "\n",
+    "當加拿大統計局對加拿大各地的數千人進行調查時，這可能足以進行一般估計。\n",
+    "\n",
+    "但是，如果存在數量較少的人口統計子組，則對數據進行的分析可能會對它們進行過度採樣，以確保它們在數據中得到體現。\n",
+    "\n",
+    "同樣，非常大的數據集（例如穀歌用來預測廣告的數據集）使用欠採樣來減少大量數據。"
    ]
   },
   {
@@ -1096,6 +1234,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "這裡有一些潛在的問題：\n",
+    "<ul>\n",
+    "<li>此數據可能不太適合邏輯回歸模型。\n",
+    "<li>我們可能有一些需要刪除的功能 - 可能存在混雜變量。\n",
+    "<li>我們可以將這些東西疊加在一起 - 例如 使用 SMOTE 然後隨機欠採樣。\n",
+    "</ul>\n",
+    "\n",
+    "只是為了好玩，我們將嘗試使用不同類型的模型，看看我們能得到什麼。 \n",
+    "\n",
+    "任何單個模型的性能並不是真的超級容易提前預測——有些應用程序更適合某些模型，但它並不是超級決定性的。 \n",
+    "\n",
+    "下學期我們會看到越來越多的比較。\n",
+    "\n",
+    "#### 嘗試另一種算法\n",
+    "\n",
+    "下面是相同的代碼，但我們用隨機森林換掉了邏輯回歸——這是一種基於樹的算法。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1173,14 +1333,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "在我們測試的所有東西中，只有換成不同的算法才能真正給出令人滿意的結果！\n",
+    "\n",
+    "請注意，原始精度與第一次嘗試並沒有太大區別，但其他精度考慮因素更好！\n",
+    "\n",
+    "基於此，我們可能可以做出一個合理的假設，即邏輯回歸算法並不是那麼適合數據。\n",
+    "\n",
+    "我懷疑允許我們做出預測的關係至少部分是非線性的。\n",
+    "\n",
+    "不同模型之間的這種可變性並不特別奇怪——隨著我們改進事物（更多數據、更清潔的數據、沒有異常值等......）它們將趨於收斂，因為其中一些數據清理事物會對不同類型產生巨大影響模型。 \n",
+    "\n",
+    "“使用哪種模型”的真正答案幾乎總是由試驗決定。\n",
+    "\n",
+    "最後，在這部分，我們可以看到構建模型的機制<i>大部分</i>對我們來說是相同的。生成模型的幕後數學完全不同，但使用它們幾乎可以互換。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise - Try it With Insurance Data\n",
     "\n",
     "The value Response is the goal, and it is also not balanced. We also have a few categorical varaibles (read the data carefully), so we need a little data prep as well. "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "值 Response 是目標，也是不平衡的。 我們還有一些分類變量（仔細閱讀數據），所以我們也需要一些數據準備。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1219,73 +1405,143 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>211313</th>\n",
        "      <td>Male</td>\n",
-       "      <td>22</td>\n",
+       "      <td>58</td>\n",
        "      <td>1</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1-2 Year</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>32078.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>273</td>\n",
        "      <td>1</td>\n",
-       "      <td>&lt; 1 Year</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188868</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-2 Year</td>\n",
        "      <td>No</td>\n",
-       "      <td>2630.0</td>\n",
+       "      <td>23542.0</td>\n",
        "      <td>152.0</td>\n",
-       "      <td>16</td>\n",
+       "      <td>145</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Male</td>\n",
+       "      <th>370535</th>\n",
+       "      <td>Female</td>\n",
        "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1-2 Year</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>37996.0</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184390</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>39</td>\n",
        "      <td>1</td>\n",
        "      <td>28.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1-2 Year</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>43327.0</td>\n",
+       "      <td>2630.0</td>\n",
        "      <td>26.0</td>\n",
-       "      <td>135</td>\n",
+       "      <td>96</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32278</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt; 1 Year</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>35696.0</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>263</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>66</td>\n",
+       "      <th>348285</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>59</td>\n",
        "      <td>1</td>\n",
-       "      <td>33.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1-2 Year</td>\n",
+       "      <td>No</td>\n",
+       "      <td>28920.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238981</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1-2 Year</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>35841.0</td>\n",
-       "      <td>124.0</td>\n",
-       "      <td>253</td>\n",
+       "      <td>60739.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>163</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>293568</th>\n",
        "      <td>Female</td>\n",
-       "      <td>22</td>\n",
+       "      <td>21</td>\n",
        "      <td>1</td>\n",
-       "      <td>33.0</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>0</td>\n",
        "      <td>&lt; 1 Year</td>\n",
-       "      <td>No</td>\n",
-       "      <td>27645.0</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>69</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>26854.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>225</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>28</td>\n",
+       "      <th>5799</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>25</td>\n",
        "      <td>1</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>&lt; 1 Year</td>\n",
-       "      <td>No</td>\n",
-       "      <td>29023.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>36115.0</td>\n",
        "      <td>152.0</td>\n",
-       "      <td>211</td>\n",
+       "      <td>72</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128410</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1-2 Year</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>2630.0</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>255</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1293,22 +1549,44 @@
        "</div>"
       ],
       "text/plain": [
-       "   Gender  Age  Driving_License  Region_Code  Previously_Insured Vehicle_Age  \\\n",
-       "0    Male   22                1          7.0                   1    < 1 Year   \n",
-       "1    Male   42                1         28.0                   0    1-2 Year   \n",
-       "2  Female   66                1         33.0                   0    1-2 Year   \n",
-       "3  Female   22                1         33.0                   0    < 1 Year   \n",
-       "4    Male   28                1         46.0                   1    < 1 Year   \n",
+       "        Gender  Age  Driving_License  Region_Code  Previously_Insured  \\\n",
+       "211313    Male   58                1         41.0                   0   \n",
+       "188868  Female   75                1         15.0                   1   \n",
+       "370535  Female   42                1         41.0                   0   \n",
+       "184390    Male   39                1         28.0                   0   \n",
+       "32278   Female   28                1         41.0                   0   \n",
+       "348285    Male   59                1          4.0                   1   \n",
+       "238981    Male   67                1         28.0                   0   \n",
+       "293568  Female   21                1         13.0                   0   \n",
+       "5799    Female   25                1          7.0                   0   \n",
+       "128410  Female   34                1          8.0                   0   \n",
        "\n",
-       "  Vehicle_Damage  Annual_Premium  Policy_Sales_Channel  Vintage  Response  \n",
-       "0             No          2630.0                 152.0       16         0  \n",
-       "1            Yes         43327.0                  26.0      135         0  \n",
-       "2            Yes         35841.0                 124.0      253         0  \n",
-       "3             No         27645.0                 152.0       69         0  \n",
-       "4             No         29023.0                 152.0      211         0  "
+       "       Vehicle_Age Vehicle_Damage  Annual_Premium  Policy_Sales_Channel  \\\n",
+       "211313    1-2 Year            Yes         32078.0                 124.0   \n",
+       "188868    1-2 Year             No         23542.0                 152.0   \n",
+       "370535    1-2 Year            Yes         37996.0                 109.0   \n",
+       "184390    1-2 Year            Yes          2630.0                  26.0   \n",
+       "32278     < 1 Year            Yes         35696.0                 152.0   \n",
+       "348285    1-2 Year             No         28920.0                  26.0   \n",
+       "238981    1-2 Year            Yes         60739.0                 122.0   \n",
+       "293568    < 1 Year            Yes         26854.0                 160.0   \n",
+       "5799      < 1 Year            Yes         36115.0                 152.0   \n",
+       "128410    1-2 Year            Yes          2630.0                 152.0   \n",
+       "\n",
+       "        Vintage  Response  \n",
+       "211313      273         1  \n",
+       "188868      145         0  \n",
+       "370535       72         0  \n",
+       "184390       96         1  \n",
+       "32278       263         0  \n",
+       "348285       13         0  \n",
+       "238981      163         0  \n",
+       "293568      225         0  \n",
+       "5799         72         0  \n",
+       "128410      255         0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1594,7 @@
    "source": [
     "df2_ = pd.read_csv(\"data/aug_train.csv.zip\")\n",
     "df2_.drop(columns={\"id\"}, inplace=True)\n",
-    "df2_.head()"
+    "df2_.sample(10)"
    ]
   },
   {
